--- a/gatsby-book/package.json
+++ b/gatsby-book/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.24",
+    "gatsby-remark-copy-linked-files": "^2.3.12",
     "gatsby-remark-highlight-code": "^1.4.5",
     "gatsby-remark-images": "^3.3.23",
     "gatsby-remark-katex": "^3.3.10",
